# KarelLearnsC

./: .gitignore  Makefile  README.md
Debug/: cursor.d  init.d  subdir.mk
ide/clion/unix/: CMakeLists.txt  HelloKarel.c  build.sh
ide/clion/windows/: CMakeLists.txt  HalloKarel.c  build.bat
ide/codeblocks/unix/: HalloKarel.c  HalloKarel.cbp  HalloKarel.layout
ide/codeblocks/windows/: HalloKarel.cbp  HalloKarel.depend
ideprojects/codeblocks_win/karel_starter_project/: karel_starter_project.layout
ideprojects/codeblocks_win_testing/karel_starter_project/: FlagKarel.c  PotholeFillingKarel.c  PotholeFillingKarelDecomposition.c  beeperCollectingKarel.c  beeperPileKarel.c  checkerBoardPattern.c  damagedPillarKarel.c  karel.h  mazeRunningKarel.c
ideprojects/codeblocks_win_testing/karel_starter_project/include/: main.h
karel/: BeeperPickingKarel.c  config.h  cursor.c  cursor.h  damagedpillartest.c  diamondMiningKarel.c  draw.c  font.c  graphicsManager.c  init.c  init.h  input.c  karel.h  structs.h  test.c  world.c  world.h
karel/data/worlds/: 8x8.w  BeeperPicking.w  FindBeeperCenter2.w  HugeCave.w  SteepleChase.w  worldArea0.w
karel/src/: main.c
karel_codeblocks_windows/karel/data/worlds/: SteepSteepleChase.w
old/: README.txt
old/Debug/: Karel  draw.d  font.d  graphicsManager.d  input.d  karel.d  main.d  makefile  objects.mk  world.d
old/ideprojects/codeblocks_win/karel_starter_project/: BeeperPickingKarel.c  karel_starter_project.cbp  karel_starter_project.depend
old/ideprojects/codeblocks_win_testing/karel_starter_project/: BeeperCarryingKarel.c  BeeperCarryingKarelRevised.c  BeeperCenterKarel.c  BeeperPickingKarel.c  FlagDistanceKarelc.c  LivingRoomKarel.c  TestKarel.c  caveClearingKarel.c  climbTwoPyramidsKarel.c  climbTwoPyramidsTest.c  diamondMiningKarel.c  helloWorldKarel.c  karel_starter_project.cbp  karel_starter_project.depend  karel_starter_project.layout  roadRepairKarel.c  roadRepairKarelGeneral.c  steepleChaseKarel.c
old/karel_codeblocks_windows/karel/: Karel.cbp  Karel.cscope_file_list  Karel.depend  Karel.layout  beeperCollectingKarel.c  draw.h
src/SdlUnix-1.2.15/lib/: libSDL_image.la  libSDL_ttf-2.0.so.0  libSDL_ttf.la
src/karel/: draw.c  input.c  itoa.c  karel.c  main.c  world.c
src/karel/data/worlds/: ClimbTwoPyramidsKarel.w  SmallCave.w  (+4 more)
src/karel/include/: config.h  draw.h  graphicsManager.h  input.h  itoa.h  karel.h  main.h  structs.h  world.h
(+34 files in other folders)
